<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.main.HomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        app:cardElevation="5dp"
        android:visibility="gone"
        app:contentPadding="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/cv_total">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_village"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"
                android:id="@+id/tv_id_village" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:text="@string/total_budget"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:id="@+id/tv_total_budget" />

            
        </LinearLayout>
        
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text="@string/nothing_dtat_to_show"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/tv_not_found" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/rv_list_data"
        android:padding="5dp"
        android:visibility="gone"
        tools:listitem="@layout/list_item_month"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_all"
        android:layout_width="300dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_button_primary"
        android:text="@string/delete_all"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_data_blt"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_data_blt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@id/btn_delete_all" />


</androidx.constraintlayout.widget.ConstraintLayout>